fixed background attachment on mobile

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,6 +23,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-size: 18px;
 	font-family: $font-family;
+	background-color: $dark;
 }
 
 body::after {
@@ -57,9 +58,23 @@ body::-webkit-scrollbar-thumb {
 	height: 100vh;
 	transition: background-image 3000ms linear;
 	background-size: cover;
-	background-attachment: fixed;
+	background-position: center;
 	background-color: #000;
 	background-image: url('../img/bg01.jpg');
+}
+
+#overlay {
+	position: fixed;
+	z-index: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+#root {
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
 .preload {
@@ -74,11 +89,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 .wrapper {
-	position: absolute;
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh;
 	width: 100vw;
+	height: 100%;
 	@include respond(small) {
 		padding: 8vw;
 		gap: 3rem;
@@ -91,7 +105,6 @@ body::-webkit-scrollbar-thumb {
 	}
 	padding: 2rem 3rem;
 	color: $primary;
-	background-color: rgba(0, 0, 0, 0.4);
 
 	.hero {
 		margin-top: auto;
